# ESPresso-Core

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
Secrets/: Secrets.hpp
main/: CMakeLists.txt  KConfig  Main.cpp  Wifi.cpp  Wifi.hpp  connect.c  main.cpp
main/ADC/: ADS1115.cpp  ADS1115.hpp
main/BoilerController/: BoilerController.cpp  BoilerController.hpp  BoilerEventLoop.cpp  BoilerEventLoop.hpp  SSRController.cpp  SSRController.hpp
main/Lib/: EventLoop.cpp  EventLoop.hpp  RollingAverage.hpp  Timer.cpp  Timer.hpp  Wifi.cpp
main/PressureSensor/: PressureEventLoop.cpp  PressureEventLoop.hpp  PressureSensor.hpp
main/PressureSensor/Sensors/: AnalogSensor.cpp  AnalogSensor.hpp
main/PumpController/: PumpController.cpp  PumpController.hpp  PumpEventLoop.cpp  PumpEventLoop.hpp
main/RESTServer/: Server.cpp  Server.hpp
main/SSR/: SSR.cpp  SSR.hpp
main/Settings/: SettingsManagerDummyImpl.cpp
main/TRIAC/: Triac.cpp  Triac.hpp
main/TemperatureSensor/: TemperatureEventLoop.cpp  TemperatureEventLoop.hpp  TemperatureSensor.hpp
main/TemperatureSensor/Sensors/: TemperatureSensor.hpp  TemperatureSensorMAX31865.cpp  TemperatureSensorMAX31865.hpp
main/Updater/: Updater.cpp  Updater.hpp  UpdaterEventLoop.cpp  UpdaterEventLoop.hpp
tools/: grapher.py  updater.py
